--- a/package.json
+++ b/package.json
@@ -8,11 +8,14 @@
     "@testing-library/user-event": "^7.2.1",
     "bootstrap": "^4.5.3",
     "datepicker": "0.0.0",
+    "jquery": "^3.5.1",
+    "popper.js": "^1.16.1",
     "react": "^17.0.0",
     "react-date-picker": "^8.0.3",
     "react-dom": "^17.0.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.4"
+    "react-scripts": "3.4.4",
+    "reactstrap": "^8.6.0"
   },
   "scripts": {
     "start": "react-scripts start",
